<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/part_3_1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_relative_xml"
                    style="@style/relative"
                    android:text="@string/relative_xml"/>
                <Button
                    android:id="@+id/btn_relative_code"
                    style="@style/relative"
                    android:text="@string/relative_code"/>
                <Button
                    android:id="@+id/btn_frame"
                    style="@style/relative"
                    android:text="@string/frame"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>